# mav_sandbox

./: README.md
mav_tracker/: CMakeLists.txt  nodelet_plugins.xml  package.xml
mav_tracker/cfg/: MavTracker.cfg
mav_tracker/include/mav_tracker/: mav_tracker.h
mav_tracker/launch/: standalone_bag_test.launch
mav_tracker/src/: mav_tracker.cpp  mav_tracker_node.cpp  mav_tracker_nodelet.cpp
